Add multi-loader acoustic runtime fixes